turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:-14: error: not found: value rule
				setBrushColor(colors( rule(state)(currentColor)(NEXT_COLOR) ));
                                                      ^Turmite:-10: error: not found: value rule
				rule(state)(currentColor)(NEXT_MOVE) match {
                                ^Turmite:-4: error: not found: value rule
				case _      => System.out.println("Unknown turn command associated to i="+currentColor+": "+rule(state)(currentColor)(NEXT_MOVE));
                                                                                                                            ^Turmite: error: not found: value rule
				state = rule(state)(currentColor)(NEXT_STATE);
                                        ^Turmite:26: error: not found: value rule
        rule = new Array[Array[Array[Int]]] (1); /* one state only */
        ^Turmite:27: error: not found: value rule
        rule(0) = new Array[Array[Int]] (nbColors); /* As many colors as letters in the ant's name */
        ^Turmite:29: error: not found: value rule
            rule(0)(i) = new Array[Int] (3); /* every command set has 3 elements */ 
            ^Turmite:31: error: not found: value rule
            rule(0)(i)(NEXT_COLOR) = (i+1) % nbColors;
            ^Turmite:34: error: not found: value rule
                rule(0)(i)(NEXT_MOVE) = LEFT;            
                ^Turmite:36: error: not found: value rule
                rule(0)(i)(NEXT_MOVE) = RIGHT;
                ^Turmite:41: error: not found: value rule
            rule(0)(i)(NEXT_STATE) = 0; /* only one state */
            ^Turmite:53: error: not found: value rule
    		rule = Array( Array( Array(1,RIGHT,0), Array(1,RIGHT,1), Array(0,NOTURN,0), Array(0,NOTURN,1) ) );
                ^Turmite:80: error: not found: value rule
		var colors = new Array[Color] (rule(0).length);
                                               ^Turmite:81: error: not found: value rule
		for (i <- 0 to rule(0).length-1) {
                               ^